# autogradinglean

./: .gitignore  README.md  pyproject.toml
docs/: design.md
src/autogradinglean/: __about__.py  __init__.py  assignment.py  base.py  classroom.py  github_work.py  manager.py  merge_candidate_databases.py
src/autogradinglean/base/: assignment.py  base.py  classroom.py  manager.py
src/autogradinglean/lean3/: assignment.py
